Fix align

--- a/css/nav.css
+++ b/css/nav.css
@@ -126,22 +126,22 @@
 
 @media (min-width:1000px) {
     .navbar-expand-md .navbar-nav .nav-link {
-        padding-left: 1rem;
-        padding-right: 1rem;
+        padding-left: 1.4rem;
+        padding-right: 1.4rem;
     }
 }
 
 @media (min-width:1400px) {
     .navbar-expand-md .navbar-nav .nav-link {
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
+        padding-left: 1.6rem;
+        padding-right: 1.6rem;
     }
 }
 
 @media (min-width:1600px) {
     .navbar-expand-md .navbar-nav .nav-link {
-        padding-left: 1.7rem;
-        padding-right: 1.7rem;
+        padding-left: 1.8rem;
+        padding-right: 1.8rem;
     }
 }
 
@@ -217,4 +217,45 @@
     .menu-nav .navbar-nav .dropdown-menu .dropdown-item {
         padding-left: 2rem;
     }
+}
+
+
+/* 两端对齐 */
+
+@media (min-width: 576px) {
+    .menu-nav .navbar-nav {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .menu-nav .navbar-nav {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    .menu-nav .navbar-nav {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .menu-nav .navbar-nav {
+        max-width: 1140px;
+    }
+}
+
+@media (max-width:992px) {
+    .top-nav>.container {
+        padding: 0;
+    }
+}
+
+.menu-nav .navbar-nav {
+    width: 100%;
+    padding-right: 8px;
+    padding-left: 8px;
+    margin-right: auto;
+    margin-left: auto;
 }
